FinTrack/kubernetes-config/fintrack-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintrack-backend-deployment
  namespace: fintrack
spec:
  selector:
    matchLabels:
      app: fintrack
      tier: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: fintrack
        tier: backend
    spec:
      containers:
      - name: fintrack-backend
        image: jasvinjames/fintrack-backend-k8s
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: fintrack-backend-service
spec:
  selector:
    app: fintrack
    tier: backend
  ports:
  - port: 3001
    targetPort: 3001
