FinTrack/kubernetes-config/fintrack-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintrack-frontend-deployment
  namespace: fintrack
spec:
  selector:
    matchLabels:
      app: fintrack-frontend
  template:
    metadata:
      labels:
        app: fintrack-frontend
    spec:
      containers:
      - name: fintrack-frontend
        image: jasvinjames/fintrack-frontend-k8s
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fintrack-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: fintrack-frontend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30000
