FinTrack/kubernetes-config/fintrack-ingress.yaml
# TODO

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintrack-ingress
  labels:
    name: fintrack-ingress
spec:
  rules:
  - host: fintrack.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fintrack-frontend-service
            port: 
              number: 3000
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: fintrack-backend-service
            port: 
              number: 3001
